--- a/SpecRunner.html
+++ b/SpecRunner.html
@@ -10,14 +10,20 @@
   <script src="lib/jasmine-2.5.2/jasmine.js"></script>
   <script src="lib/jasmine-2.5.2/jasmine-html.js"></script>
   <script src="lib/jasmine-2.5.2/boot.js"></script>
+  <script src='https://code.jquery.com/jquery-2.1.4.js'></script>
+ <script>
+   $.holdReady(true);
+ </script>
+ <script src="lib/jasmine-jquery.js"></script>
 
   <!-- include source files here... -->
   <script src="src/fizzBuzz.js"></script>
 
 
   <!-- include spec files here... -->
-  <script src="spec/SpecHelper.js"></script>
+<!--  <script src="spec/SpecHelper.js"></script>-->
   <script src="spec/fizzBuzzSpec.js"></script>
+    <script src="spec/FBUiSpec.js"></script>
 
 </head>
 
