added user interface

--- a/SpecRunner.html
+++ b/SpecRunner.html
@@ -16,8 +16,10 @@
  </script>
  <script src="lib/jasmine-jquery.js"></script>
 
+
   <!-- include source files here... -->
-  <script src="src/fizzBuzz.js"></script>
+  <script src="assets/js/fizzBuzz.js"></script>
+    <script src="assets/js/app.js"></script>
 
 
   <!-- include spec files here... -->
