--- a/spec/fixtures/fb_partial.html
+++ b/spec/fixtures/fb_partial.html
@@ -1,6 +1,6 @@
 <h3>My Fixture</h3>
-<input type="text" id="text" placeholder="Input some text">
-<input type="button" id="click_me" value="Click me">
+<input type="text" id="number" placeholder="number">
+<input type="button" id="play" value="Clik here to Play!!!">
 <div>
   <span id="display_message"></span>
 </div>
